--- a/build.gradle
+++ b/build.gradle
@@ -12,24 +12,27 @@ plugins {
 
     // Apply the application plugin to add support for building an application
     id 'war'
+
+    id 'net.ltgt.apt' version '0.10'
 }
 
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
     providedCompile 'javax:javaee-api:8.0'
     providedCompile group: 'org.eclipse.microprofile', name: 'microprofile', version: '2.1', ext: 'pom'
 
+    compileOnly 'org.projectlombok:lombok:1.18.4'
+    apt 'org.projectlombok:lombok:1.18.4'
+    
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
-
-// Define the main class for the application
-//mainClassName = 'net.brobank.App'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
