--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Ignore Gradle build output directory
 build
 out
+bin
 
 # Ignore IntelliJ project directory
 .idea
@@ -19,14 +20,6 @@ out
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
